force-app/main/default/objects/Loyalty_Transaction__c/Loyalty_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object will store individual transaction details i.e. Loyal Points, Transaction Type, Loyalty Number</description>
    <label>Loyalty Transaction</label>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Loyalty Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>