force-app/main/default/objects/Loyalty_Transaction__c/fields/Data_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Data Migration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>