force-app/main/default/objects/Loyalty_Transaction__c/fields/Has_Charity__c.field-meta.xml
<CustomField>
    <fullName>Has_Charity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Charity</label>
    <type>Checkbox</type>
</CustomField>