force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <label>Loyalty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Loyalty__c.Loyalty_Consumer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Loyalty_Consumer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loyalty__c</referenceTo>
    <relationshipLabel>Loyalty Transactions (Loyalty)</relationshipLabel>
    <relationshipName>Loyalty_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>