force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Consumer__c</fullName>
    <label>Loyalty Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Transactions</relationshipLabel>
    <relationshipName>Loyalty_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>