force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Notes__c</fullName>
    <label>Loyalty Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>