force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Notes_Reference__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Notes_Reference__c</fullName>
    <label>Loyalty Transaction/Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>