force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Source__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Source__c</fullName>
    <label>Loyalty Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Relations</fullName>
                <default>true</default>
                <label>Consumer Relations</label>
            </value>
            <value>
                <fullName>Blokker POS</fullName>
            </value>
            <value>
                <fullName>Blokker WebShop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Episerver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>