force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Transaction_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Transaction_Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Transaction: Created Date/Time</label>
    <type>DateTime</type>
</CustomField>