force-app/main/default/objects/Loyalty_Transaction__c/fields/Loyalty_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Transaction_Type__c</fullName>
    <label>Loyalty Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Campaign Reward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>