force-app/main/default/objects/Loyalty_Transaction__c/fields/Total_Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Loyalty_Points__c</fullName>
    <label>Total Loyalty Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>