force-app/main/default/objects/Loyalty_Transaction__c/validationRules/CorrectionAndTransfer.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectionAndTransfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND ($Setup.ProcessBuilderSettings__c.LoyaltyTransactionProcessBuilder__c,AND( IF(Transaction_Amount__c&lt;0,(ABS(Transaction_Amount__c) &gt; Loyalty__r.Loyalty_Total_Points__c),false), 
ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Correction&quot;)|| 
ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Transfer&quot;)))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Transaction amount is not valid</errorMessage>
</ValidationRule>