force-app/main/default/objects/Loyalty_Transaction__c/validationRules/DE_External_Profile_Cannot_Deposit.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_External_Profile_Cannot_Deposit</fullName>
    <active>true</active>
    <description>DE External Identity User cannot do any non-Redeem loyalty transaction.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Redeem&quot;)),
$Profile.Id = &quot;00e0Y000000RZR0&quot;
)</errorConditionFormula>
    <errorMessage>DE External Identity User cannot do any non-Redeem loyalty transaction.</errorMessage>
</ValidationRule>