force-app/main/default/objects/Loyalty_Transaction__c/validationRules/DepositCannotAcceptNegativePoints.validationRule-meta.xml
<ValidationRule>
    <fullName>DepositCannotAcceptNegativePoints</fullName>
    <active>true</active>
    <errorConditionFormula>AND ($Setup.ProcessBuilderSettings__c.LoyaltyTransactionProcessBuilder__c,AND( Transaction_Amount__c &lt;=0 , 
ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Compensation&quot;) || 
ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Deposit&quot;) || 
ISPICKVAL(Loyalty_Transaction_Type__c, &quot;Returned&quot;)))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Transaction amount is not valid</errorMessage>
</ValidationRule>