force-app/main/default/objects/Loyalty_Transaction__c/validationRules/Transaction_Amount_Greater_Than_75000.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Amount_Greater_Than_75000</fullName>
    <active>true</active>
    <errorConditionFormula>AND ($Setup.ProcessBuilderSettings__c.LoyaltyTransactionProcessBuilder__c, OR(Transaction_Amount__c &gt; 75000,Transaction_Amount__c &lt; -75000))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Transaction of more than 75000 are not allowed</errorMessage>
</ValidationRule>